--- a/lu.uni.lassy.excalibur.group08.usermanual.report/doc/information/information.tex
+++ b/lu.uni.lassy.excalibur.group08.usermanual.report/doc/information/information.tex
@@ -14,6 +14,10 @@ saved on our servers as backup and only be accessed by our team. The software is
 running on Windows and IOS and our servers on Linux.
 
 \section{Copyright}
+this is a test
+this is a test
+this is a test
+this is a test
 
 All rights are preserved by our company. All registered data will be saved and
 be prohibited for public media. 
